--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -13,8 +13,10 @@
     <h1>
       Creating a new Java project
     </h1>
+	<p>
     You can organize Java projects in two different ways. 
-    <ul>
+    </p>
+	<ul>
       <li>
         Use the project as the container of packages. In this organization, all Java packages are created directly inside the project. This is the selected organization by
         default. The generated CLASS files are stored along with the JAVA source files.
@@ -24,9 +26,11 @@
         source folders as children of the project and create your packages inside these source folders.
       </li>
     </ul>
+	<p>
     The default organization for new projects can be changed on the preference pages (<strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Java &gt; New
     Project</strong>). 
-    <p>
+    </p>
+	<p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
     <p>
@@ -44,7 +48,9 @@
        <a href="tasks-11.htm">Creating Java elements</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-121.htm">New Java Project wizard</a><br>
        <a href="../reference/ref-preferences-new-project.htm">New Project preference page</a>
     </p>
