--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -55,11 +55,12 @@
        <a href="tasks-90.htm">Renaming a package</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-125.htm">New Java Package wizard</a><br>
        <a href="../reference/ref-128.htm">New Source Folder wizard</a><br>
-       <a href="../reference/ref-3.htm">Java Toolbar actions</a><br>
-       &nbsp;
+       <a href="../reference/ref-3.htm">Java Toolbar actions</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
