--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
@@ -16,7 +16,7 @@
     <p>
       Use the New Java Class wizard to create a new Java class. There are a number of ways to open this wizard:
     </p>
-    <ol start="1" type="1">
+    <ol>
       <li>
         Select the container where you want the new class to reside.
       </li>
@@ -25,9 +25,9 @@
       </li>
     </ol>
     <p>
-      &nbsp; or
+      or
     </p>
-    <ol start="1" type="1">
+    <ol>
       <li>
         Select the container where you want the new class to reside.
       </li>
@@ -36,7 +36,7 @@
       </li>
     </ol>
     <p>
-      &nbsp; or
+      or
     </p>
     <ol start="1" type="1">
       <li>
@@ -47,17 +47,17 @@
       </li>
     </ol>
     <p>
-      &nbsp; or
+      or
     </p>
     <p>
-      &nbsp; Click the&nbsp;<strong><strong>Open The New Wizard</strong></strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
+      Click the&nbsp;<strong><strong>Open The New Wizard</strong></strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
       <strong>Class</strong>.
     </p>
     <p>
-      &nbsp; or
+      or
     </p>
     <p>
-      &nbsp; Select the container where you want the new class to reside. Then, select from the menu bar <strong>File</strong> &gt; <strong>New</strong> &gt;
+      Select the container where you want the new class to reside. Then, select from the menu bar <strong>File</strong> &gt; <strong>New</strong> &gt;
       <strong>Class</strong>.
     </p>
     <p>
@@ -78,7 +78,9 @@
        <a href="tasks-129.htm">Setting execution arguments</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-121.htm">New Java Project wizard</a><br>
        <a href="../reference/ref-128.htm">New Source Folder wizard</a><br>
        <a href="../reference/ref-125.htm">New Java Package wizard</a><br>
