--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
@@ -16,18 +16,24 @@
     <p>
       An alternative way to create a new class is to add it to an existing compilation unit.
     </p>
+	<ol>
+    <li>
+      In the Package Explorer, double-click a compilation unit to open it in an editor.
+    </li>
+    <li>
+      Type the code for the class at the desired position in the compilation unit.
+    </li>
+	</ol>
     <p>
-      1. In the Package Explorer, double-click a compilation unit to open it in an editor.
-    </p>
-    <p>
-      2. Type the code for the class at the desired position in the compilation unit.
-    </p>
-    <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../concepts/concepts-3.htm">Java projects</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="tasks-17.htm">Creating a new Java class</a><br>
        <a href="tasks-18.htm">Creating a top-level class</a><br>
        <a href="tasks-19.htm">Creating a nested class</a><br>
@@ -36,7 +42,9 @@
        <a href="tasks-129.htm">Setting execution arguments</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
