--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -16,18 +16,18 @@
     <p>
       Use the New Java Interface wizard to create a new Java interface. There are a number of ways to open this wizard:
     </p>
-    <ol start="1" type="1">
+    <ol>
       <li>
         Select the container where you want the new class to reside.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Create a Java Interface</strong></strong> button in the workbench toolbar.
+        Click the&nbsp;<strong>Create a Java Interface</strong> button in the workbench toolbar.
       </li>
     </ol>
     <p>
-      &nbsp; or
+      or
     </p>
-    <ol start="1" type="1">
+    <ol>
       <li>
         Select the container where you want the new class to reside.
       </li>
@@ -36,28 +36,28 @@
       </li>
     </ol>
     <p>
-      &nbsp; or
+      or
     </p>
-    <ol start="1" type="1">
+    <ol>
       <li>
         Select the container where you want the new class to reside.
       </li>
       <li>
-        From the drop-down menu on the&nbsp;<strong><strong>Open The New Wizard</strong></strong> button in the workbench toolbar, select <strong>Interface</strong>.
+        From the drop-down menu on the&nbsp;<strong>Open The New Wizard</strong> button in the workbench toolbar, select <strong>Interface</strong>.
       </li>
     </ol>
     <p>
-      &nbsp; or
+      or
     </p>
     <p>
-      &nbsp; Click the&nbsp;<strong><strong>Open The New Wizard</strong></strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
+      Click the&nbsp;<strong>Open The New Wizard</strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
       <strong>Interface</strong>.
     </p>
     <p>
-      &nbsp; or
+      or
     </p>
     <p>
-      &nbsp; Select the container where you want the new interface to reside. Then, from the menu bar select <strong>File</strong> &gt; <strong>New</strong> &gt;
+      Select the container where you want the new interface to reside. Then, from the menu bar select <strong>File</strong> &gt; <strong>New</strong> &gt;
       <strong>Interface</strong>
     </p>
     <p>
@@ -76,11 +76,12 @@
        <a href="tasks-94.htm">Renaming a class or interface</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-127.htm">New Java Interface wizard</a><br>
        <a href="../reference/ref-3.htm">Java Toolbar actions</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
