--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
@@ -21,28 +21,28 @@
         Open the New Java Interface wizard.
       </li>
       <li>
-        Edit the&nbsp;<strong><strong>Source Folder</strong></strong> field as needed to indicate in which folder you want the new interface to reside. You can either type a path
-        or click the&nbsp;<strong><strong>Browse</strong></strong> button to find the folder. If a folder is found for the current selection, that folder appears in
-        the&nbsp;<strong><strong>Source Folder</strong></strong> field as the container for the new interface.
+        Edit the&nbsp;<strong>Source Folder</strong> field as needed to indicate in which folder you want the new interface to reside. You can either type a path
+        or click the&nbsp;<strong>Browse</strong> button to find the folder. If a folder is found for the current selection, that folder appears in
+        the&nbsp;<strong>Source Folder</strong> field as the container for the new interface.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Package</strong></strong> field, type a name or click&nbsp;<strong><strong>Browse</strong></strong> to select the package where you want the
+        In the&nbsp;<strong>Package</strong> field, type a name or click&nbsp;<strong>Browse</strong> to select the package where you want the
         new interface to reside. If you want the new interface to be created in the default package, leave this field empty.
       </li>
       <li>
-        Clear the&nbsp;<strong><strong>Enclosing Type</strong></strong> check box.
+        Clear the&nbsp;<strong>Enclosing Type</strong> check box.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Name</strong></strong> field, type a name for the new interface.
+        In the&nbsp;<strong>Name</strong> field, type a name for the new interface.
       </li>
       <li>
-        Select the <strong>public</strong> or <strong>default</strong> access modifier using the&nbsp;<strong><strong>Modifiers</strong></strong> radio buttons.
+        Select the <strong>public</strong> or <strong>default</strong> access modifier using the&nbsp;<strong>Modifiers</strong> radio buttons.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Add</strong></strong> button to add interfaces for the new interface to extend.
+        Click the&nbsp;<strong>Add</strong> button to add interfaces for the new interface to extend.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong>.
+        Click&nbsp;<strong>Finish</strong>.
       </li>
     </ol>
     <p>
@@ -61,7 +61,9 @@
        <a href="tasks-94.htm">Renaming a class or interface</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+   </p>
+    <p>	  
        <a href="../reference/ref-127.htm">New Java Interface wizard</a><br>
        <a href="../reference/ref-3.htm">Java Toolbar actions</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
