--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
@@ -13,14 +13,16 @@
       Creating a new interface in an existing compilation unit
     </h1>
     <p>
-      An alternative way to create a new interface is to add it to an existing compilation unit. To do this,
+      An alternative way to create a new interface is to add it to an existing compilation unit.
     </p>
-    <p>
-      1.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> In the Package Explorer, double-click a compilation unit.
-    </p>
-    <p>
-      2.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Type the code for the interface at the desired position in the compilation unit.
-    </p>
+	<ol>
+    <li>
+      In the Package Explorer, double-click a compilation unit.
+    </li>
+    <li>
+      Type the code for the interface at the desired position in the compilation unit.
+    </li>
+	</ol>
     <p>
       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
     </p>
@@ -44,7 +46,6 @@
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
-      &nbsp;<br>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
