--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -22,25 +22,29 @@
         From the project&#39;s pop-up menu, select <strong>New</strong> &gt; <strong>Others</strong>. The new wizard opens.
       </li>
       <li>
-        Select Java from the left pane and Source Folder from the right pane, then click Next. The New Source Folder wizard opens.
+        Select Java from the left pane and Source Folder from the right pane, then click <strong>Next</strong>. The New Source Folder wizard opens.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Project Name</strong></strong> field, the name of the selected project appears. If you need to edit this field, you can either type a path or
-        click&nbsp;<strong><strong>Browse</strong></strong> to choose a project that uses source folders.
+        In the&nbsp;<strong>Project Name</strong> field, the name of the selected project appears. If you need to edit this field, you can either type a path or
+        click&nbsp;<strong>Browse</strong> to choose a project that uses source folders.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Folder Name</strong></strong> field, type a name for the new source folder.
+        In the&nbsp;<strong>Folder Name</strong> field, type a name for the new source folder.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong> when you are done.
+        Click&nbsp;<strong>Finish</strong> when you are done.
       </li>
     </ol>
     <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	 </p>
+	 <p>	  
        <a href="../concepts/concepts-3.htm">Java projects</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	 </p>
+	 <p>
        <a href="tasks-11.htm">Creating Java elements</a><br>
        <a href="tasks-12.htm">Creating a new Java project</a><br>
        <a href="tasks-15.htm">Creating a new Java package</a><br>
@@ -48,11 +52,12 @@
        <a href="tasks-14.htm">Creating a Java project with source folders</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	 </p>
+	 <p>	  
        <a href="../reference/ref-128.htm">New Source Folder wizard</a><br>
        <a href="../reference/ref-3.htm">Java Toolbar actions</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
