--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -14,31 +14,38 @@
       Showing and hiding system files
     </h1>
     To show system files: 
-    <p>
-      1. Select the&nbsp;<strong><strong>Filters</strong></strong> command from the Package Explorer view drop-down menu.
-    </p>
-    <p>
-      2. Clear the <strong>hide&nbsp;.* files</strong> checkbox.
-    </p>
+    <ol>
+    <li>
+      Select the <strong>Filters</strong> command from the Package Explorer view drop-down menu.
+    </li>
+    <li>
+      Clear the <strong>hide&nbsp;.* files</strong> checkbox.
+    </li>
+    </ol>
     <p>
       To hide system files:
     </p>
+    <ol>
+    <li>
+      Select the <strong>Filters</strong> command from the Package Explorer view drop-down menu.
+    </li>
+    <li>
+      Select the <strong>hide&nbsp;.* files</strong> checkbox. This hides files that have only a file extension but no file name, such as&nbsp;<em>.classpath</em>.
+    </li>
+	</ol>
     <p>
-      1. Select the&nbsp;<strong><strong>Filters</strong></strong> command from the Package Explorer view drop-down menu.
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
-    <p>
-      2. Select the <strong>hide&nbsp;.* files</strong> checkbox. This hides files that have only a file extension but no file name, such as&nbsp;<em>.classpath</em>.
-    </p>
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+    <p>	
        <a href="tasks-2.htm">Showing and hiding elements</a><br>
        <a href="tasks-47.htm">Filtering elements</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
