--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-30.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-30.htm
@@ -21,19 +21,19 @@
         From the workbench menu bar, select <strong>File</strong> &gt; <strong>Import</strong>. The Import wizard opens
       </li>
       <li>
-        Select&nbsp;<strong><strong>File System</strong></strong>, then click&nbsp;<strong><strong>Next</strong></strong>.
+        Select&nbsp;<strong>File System</strong>, then click&nbsp;<strong>Next</strong>.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Directory</strong></strong> field, type or browse to select the directory where the JAR file resides.
+        In the&nbsp;<strong>Directory</strong> field, type or browse to select the directory where the JAR file resides.
       </li>
       <li>
         In the import selection panes, expand the hierarchy and use the buttons to select the JAR file you want to import.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Where Do You Want The Imported Resources To Go?</strong></strong> field, type or browse to select a workbench container for the JAR file.
+        In the&nbsp;<strong>Select the destination for imported resources</strong> field, type or browse to select a workbench container for the JAR file.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong> when you are done.
+        Click&nbsp;<strong>Finish</strong> when you are done.
       </li>
       <li>
         You now must add the JAR file to the build class path of any projects that need this library.
@@ -54,7 +54,9 @@
        <a href="tasks-31.htm">Adding source code as individual files</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+   </p>
+    <p>	  
        <a href="../reference/ref-123.htm">Java Build Path</a>
     </p>
     <p>
