--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-31.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-31.htm
@@ -25,10 +25,10 @@
         From the workbench menu bar, select <strong>File</strong> &gt; <strong>Import</strong>.
       </li>
       <li>
-        In the Import wizard, select <strong>Zip file</strong>, then click&nbsp;<strong><strong>Next</strong></strong>.
+        In the Import wizard, select <strong>Zip file</strong>, then click&nbsp;<strong>Next</strong>.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Zip file</strong></strong> field, type or browse to select the file from which you would like to add the resources. In the import selection
+        In the&nbsp;<strong>Zip file</strong> field, type or browse to select the file from which you would like to add the resources. In the import selection
         panes, use the following methods to select exactly the resources you want to add: 
         <ul>
           <li>
@@ -36,18 +36,18 @@
             boxes for individual files.
           </li>
           <li>
-            Click <strong><strong>Select Types</strong></strong> to select specific file types to add.
+            Click <strong>Select Types</strong> to select specific file types to add.
           </li>
           <li>
-            Click <strong><strong>Select All</strong></strong> to select all files in the directory, then go through and deselect the ones that you don&#39;t want to add.
+            Click <strong>Select All</strong> to select all files in the directory, then go through and deselect the ones that you don&#39;t want to add.
           </li>
           <li>
-            Click <strong><strong>Deselect All</strong></strong> to deselect all files in the directory, then go through and choose individual files to add.
+            Click <strong>Deselect All</strong> to deselect all files in the directory, then go through and choose individual files to add.
           </li>
         </ul>
       </li>
       <li>
-        In the <strong>Where Do You Want The Imported Resources To Go?</strong> field, type or browse to select a workbench container for the added resources (if it was not
+        In the <strong>Select the destination for imported resources</strong> field, type or browse to select a workbench container for the added resources (if it was not
         already selected when you activated the&nbsp;<strong>Import</strong> command).
       </li>
       <li>
@@ -69,7 +69,7 @@
         From the workbench menu bar, select <strong>File</strong> &gt; <strong>Import</strong>.
       </li>
       <li>
-        In the import wizard, select <strong>File System</strong>, then click&nbsp;<strong><strong>Next</strong></strong>.
+        In the import wizard, select <strong>File System</strong>, then click&nbsp;<strong>Next</strong>.
       </li>
       <li>
         In the <strong>Directory</strong> field, type or browse to select the directories from which you would like to add the resources.
@@ -82,46 +82,54 @@
             boxes for individual files.
           </li>
           <li>
-            Click&nbsp;<strong><strong>Select Types</strong></strong> to select specific file types to add.
+            Click&nbsp;<strong>Select Types</strong> to select specific file types to add.
           </li>
           <li>
-            Click&nbsp;<strong><strong>Select All</strong></strong> to select all files in the directory, then go through and deselect the ones that you don&#39;t want to add.
+            Click&nbsp;<strong>Select All</strong> to select all files in the directory, then go through and deselect the ones that you don&#39;t want to add.
           </li>
           <li>
-            Click&nbsp;<strong><strong>Deselect All</strong></strong> to deselect all files in the directory, then go through and choose individual files to add.
+            Click&nbsp;<strong>Deselect All</strong> to deselect all files in the directory, then go through and choose individual files to add.
           </li>
         </ul>
       </li>
       <li>
-        In the <strong><strong>Where Do You Want The Imported Resources To Go?</strong></strong> field, type or browse to select a workbench container for the added resources (if
+        In the <strong>Select the destination for imported resources</strong> field, type or browse to select a workbench container for the added resources (if
         it was not already selected when you activated the&nbsp;<strong>Import</strong> command).
       </li>
       <li>
         In the <strong>Options</strong> area, you can choose whether you want to:
       </li>
+	  <ul>
       <li>
         overwrite existing resources without warning
       </li>
       <li>
         create a complete file structure for the imported files
       </li>
+	  </ul>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong> when you are done.
+        Click&nbsp;<strong>Finish</strong> when you are done.
       </li>
     </ol>
-    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> <br>
+	<p>
+    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> <br>
      <a href="../concepts/cbuildcp.htm">Build classpath</a> 
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="tasks-30.htm">Adding a JAR file as a library</a><br>
        <a href="tasks-110.htm">Working with build paths</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-123.htm">Java Build Path</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
