--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <title>
+	   Creating JAR files
     </title>
   </head>
   <body>
@@ -22,7 +23,9 @@
        <a href="tasks-36.htm">Regenerating a JAR file</a><a href="tasks-36.htm"></a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-export-jar.htm">JAR file exporter</a>
     </p>
     <p>
