--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -25,25 +25,25 @@
         From the menu bar, select <strong>File</strong> &gt; <strong>Export</strong>.
       </li>
       <li>
-        Select <strong>JAR file</strong>, then click&nbsp;<strong><strong>Next</strong></strong>.
+        Select <strong>JAR file</strong>, then click&nbsp;<strong>Next</strong>.
       </li>
       <li>
-        In the <strong>Jar Package Specification</strong> page, select the resources that you want to export in the <strong><strong>Select the resources to
-        export&nbsp;</strong></strong>field.
+        In the <strong>Jar Package Specification</strong> page, select the resources that you want to export in the <strong>Select the resources to
+        export&nbsp;</strong>field.
       </li>
       <li>
         Select the appropriate check box to specify whether you want to <strong>Export generated class files and resources</strong> or <strong>Export Java source files and
         resources</strong>. <strong>Note</strong>: Selected resources are exported in both cases.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Select the export destination</strong></strong> field, either type or click&nbsp;<strong><strong>Browse</strong></strong> to select a location
+        In the&nbsp;<strong>Select the export destination</strong> field, either type or click&nbsp;<strong>Browse</strong> to select a location
         for the JAR file.
       </li>
       <li>
-        Select or clear the&nbsp;<strong><strong>Compress the contents of the JAR file</strong></strong> check box.
+        Select or clear the&nbsp;<strong>Compress the contents of the JAR file</strong> check box.
       </li>
       <li>
-        Select or clear the&nbsp;<strong><strong>Overwrite existing files without warning</strong> check box. If you clear this check box,&nbsp;</strong>then you will be prompted
+        Select or clear the&nbsp;<strong>Overwrite existing files without warning</strong> check box. If you clear this check box,&nbsp;then you will be prompted
         to confirm the replacement of each file that will be overwritten.
       </li>
       <li>
@@ -51,30 +51,35 @@
       </li>
       <li>
         You have two options:
-      </li>
-      <li>
         <ul>
           <li>
-            Click&nbsp;<strong><strong>Finish</strong></strong> to create the JAR file immediately.
+            Click&nbsp;<strong>Finish</strong> to create the JAR file immediately.
           </li>
           <li>
-            Click&nbsp;<strong><strong>Next</strong></strong> to use the JAR Packaging Options page to set advanced options, create a JAR description, or change the default
+            Click&nbsp;<strong>Next</strong> to use the JAR Packaging Options page to set advanced options, create a JAR description, or change the default
             manifest.
           </li>
         </ul>
       </li>
     </ol>
-    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> <br>
+	<p>
+    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> 
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
        <a href="tasks-115.htm">Attaching source to a JAR file</a><br>
        <a href="tasks-35.htm">Defining the JAR file&#39;s manifest</a><br>
        <a href="tasks-34.htm">Setting advanced options</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="../reference/ref-export-jar.htm">JAR file exporter</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
