--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
@@ -19,19 +19,19 @@
     <h2>
       Creating a new manifest
     </h2>
-    <ol start="1" type="1">
+    <ol>
       <li>
-        Follow the procedure for creating a JAR file, but click&nbsp;<strong><strong>Next</strong></strong> in the last step to go to the JAR Packaging Options page.
+        Follow the procedure for creating a JAR file, but click&nbsp;<strong>Next</strong> in the last step to go to the JAR Packaging Options page.
       </li>
       <li>
-        Set any advanced options that you want to set, and then click&nbsp;<strong><strong>Next</strong></strong> again to go to the JAR Manifest Specification page.
+        Set any advanced options that you want to set, and then click&nbsp;<strong>Next</strong> again to go to the JAR Manifest Specification page.
       </li>
       <li>
-        If it is not already selected, click the&nbsp;<strong><strong>Generate the manifest file</strong></strong> button.
+        If it is not already selected, click the&nbsp;<strong>Generate the manifest file</strong> button.
       </li>
       <li>
         You can now choose to save the manifest in the workbench. This will save the manifest for later use. Click&nbsp;<strong>Save the manifest in the workspace</strong>, then
-        click&nbsp;<strong><strong>Browse</strong></strong> next to the&nbsp;<strong><strong>Manifest file</strong></strong> field to specify a path and file name for the
+        click&nbsp;<strong>Browse</strong> next to the&nbsp;<strong>Manifest file</strong> field to specify a path and file name for the
         manifest.
       </li>
       <li>
@@ -43,44 +43,51 @@
         You can choose to seal the JAR and optionally exclude some packages from being sealed or specify a list with sealed packages. By default, nothing is sealed.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Browse</strong></strong> button next to the&nbsp;<strong><strong>Main-Class</strong></strong> field to specify the entry point for your
+        Click the&nbsp;<strong>Browse</strong> button next to the&nbsp;<strong>Main class</strong> field to specify the entry point for your
         applications.<br>
          <strong>Note</strong>: If your class is not in the list, then you forgot to select it at the beginning.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong>. This will create the JAR, and optionally a JAR description and a manifest file.
+        Click&nbsp;<strong>Finish</strong>. This will create the JAR, and optionally a JAR description and a manifest file.
       </li>
     </ol>
     <h2>
       Using an existing manifest
     </h2>
     You can use an existing manifest file that already exists in your workbench. 
-    <ol start="1" type="1">
+    <ol>
       <li>
-        Follow the procedure for creating a JAR file, but click&nbsp;<strong><strong>Next</strong></strong> in the last step to go to the JAR Packaging Options page.
+        Follow the procedure for creating a JAR file, but click&nbsp;<strong>Next</strong> in the last step to go to the JAR Packaging Options page.
       </li>
       <li>
-        Set any advanced options that you want to set, and the click&nbsp;<strong><strong>Next</strong></strong> again to go to the JAR Manifest Specification page.
+        Set any advanced options that you want to set, and the click&nbsp;<strong>Next</strong> again to go to the JAR Manifest Specification page.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Use existing manifest from workspace</strong> radio&nbsp;</strong>button.
+        Click the&nbsp;<strong>Use existing manifest from workspace</strong> radio button.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Browse</strong></strong> button to choose a manifest file from the workbench.
+        Click the&nbsp;<strong>Browse</strong> button to choose a manifest file from the workbench.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong>. This will create the JAR and optionally a JAR description.
+        Click&nbsp;<strong>Finish</strong>. This will create the JAR and optionally a JAR description.
       </li>
     </ol>
-    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+	<p>
+    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> 
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p> 
        <a href="tasks-33.htm">Creating a new JAR file</a><br>
        <a href="tasks-34.htm">Setting advanced options</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-export-jar.htm">JAR file exporter</a>
     </p>
     <p>
