--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-36.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-36.htm
@@ -21,18 +21,26 @@
         Select one or more JAR file descriptions in your workbench.
       </li>
       <li>
-        From the selection&#39;s pop-up menu, select&nbsp;<strong><strong>Create JAR</strong></strong>. The JAR file(s) are regenerated.
+        From the selection&#39;s pop-up menu, select&nbsp;<strong>Create JAR</strong>. The JAR file(s) are regenerated.
       </li>
     </ol>
-    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> <br>
+	<p>
+    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+    </p>
+    <p>	
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> 
+    </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+    </p>
+    <p>
        <a href="tasks-33.htm">Creating a new JAR file</a><br>
        <a href="tasks-35.htm">Defining the JAR file&#39;s manifest</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>
        <a href="../reference/ref-export-jar.htm">JAR file exporter</a>
     </p>
     <p>
