--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -13,7 +13,9 @@
     <h1>
       Opening a type hierarchy on a Java element
     </h1>
-    There are six ways to open a type hierarchy. Select a java element in a Java view and: 
+	<p>
+    There are several ways to open a type hierarchy. Select a Java element in a Java view and: 
+	</p>
     <ul>
       <li>
         Press <strong>F4</strong> or
@@ -35,11 +37,15 @@
       </li>
     </ul>
     <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="tasks-7.htm">Changing new type hierarchy defaults</a><br>
        <a href="tasks-11.htm">Creating Java elements</a><br>
        <a href="tasks-37.htm">Using the Hierarchy view</a><br>
@@ -49,11 +55,11 @@
        <a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="../reference/ref-24.htm">Views and editors</a><br>
-       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
-       &nbsp;<br>
-       &nbsp;
+       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
