--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -46,11 +46,12 @@
        <a href="tasks-96.htm">Renaming a method</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-dialog-override-method.htm">Override methods</a><br>
        <a href="../reference/ref-menu-source.htm">Source menu</a><br>
-       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
-       &nbsp;
+       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
