--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
@@ -24,7 +24,7 @@
         In the list pane of the Hierarchy view, make sure that the&nbsp;<strong><strong>Lock View and Show Members in Hierarchy</strong></strong> button is toggled on. This option
         locks the current class in the method pane and shows only those classes in the upper view that implement the currently selected method of the locked class. You can tell
         this option is turned on if, after you select a method, the Hierarchy view&#39;s title bar indicates that the view is &quot;Filtered&quot;. <img src=
-        "../images/tasks-8.gif" height="188" width="267" alt="Hierarchy view in Filtered Subtypes mode"> The methods of interest are shown in the upper pane. You can select any
+        "../images/tasks-8.gif" height="188" width="267" alt="Hierarchy view in Filtered Subtypes mode"><br>The methods of interest are shown in the upper pane. You can select any
         method and open it in an editor.
       </li>
     </ol>
@@ -33,9 +33,13 @@
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
     </p>
-    <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> 
-    <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+	<p>
+	   <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> 
+    </p>
+	<p>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="tasks-37.htm">Using the Hierarchy view</a><br>
        <a href="tasks-47.htm">Filtering elements</a><br>
        <a href="tasks-73.htm">Opening an editor for a selected element</a><br>
@@ -43,7 +47,9 @@
        <a href="tasks-43.htm">Overriding a method</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-dialog-override-method.htm">Override methods</a><br>
        <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
     </p>
