--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -13,7 +13,9 @@
     <h1>
       Showing and hiding libraries
     </h1>
+	<p>
     To show libraries: 
+	</p>
     <ol>
       <li>
         Select the <strong>Filters</strong> command from the Package Explorer&#39;s drop-down menu.
@@ -22,8 +24,10 @@
         Clear the <strong>Hide referenced libraries</strong> checkbox.
       </li>
     </ol>
+	<p>
     To hide libraries: 
-    <ol>
+    </p>
+	<ol>
       <li>
         Select the <strong>Filters</strong> command from the Package Explorer&#39;s drop-down menu.
       </li>
@@ -31,16 +35,19 @@
         Select the <strong>Hide referenced libraries</strong> checkbox.
       </li>
     </ol>
+	<p>
     <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"> 
-    <p>
+    </p>
+	<p>
       <a href="tasks-2.htm">Showing and hiding elements</a><br>
        <a href="tasks-47.htm">Filtering elements</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
