--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -23,13 +23,11 @@
     </ol>
     <p>
       <strong>Note</strong>: You can use drag-and-drop to move resources between different workbench windows. Select a resource you want to move, and drag-and-drop it onto the
-      desired destination. If you want to copy rather than move, hold the <strong>Ctrl</strong> key down while dragging.<br>
-       &nbsp;
+      desired destination. If you want to copy rather than move, hold the <strong>Ctrl</strong> key down while dragging.
     </p>
     <p>
       You can also use drag-and-drop to copy resources between the workbench and the desktop (both ways), but you cannot move files from the desktop to the workbench using
-      drag-and-drop.<br>
-       &nbsp;
+      drag-and-drop.
     </p>
     <p>
       Moving compilation units updates only package declarations; it does not update references to the classes declared in those compilation units. This can result in compilation
@@ -37,7 +35,6 @@
       selected compilation units will be updated.
     </p>
     <p>
-      <br>
        <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
     <p>
@@ -59,8 +56,7 @@
     </p>
     <p>
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       &nbsp;
+       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
