--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-58.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-58.htm
@@ -35,8 +35,7 @@
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="../reference/ref-menu-source.htm">Source menu</a><br>
-       &nbsp;
+      <a href="../reference/ref-menu-source.htm">Source menu</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
