--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -21,13 +21,13 @@
         Select a reference to a type in your Java code, and do one of the following: 
         <ul>
           <li>
-            Select <strong>Source &gt;</strong>&nbsp;<strong><strong>Add Import</strong></strong> from the pop-up menu in the editor
+            Select <strong>Source &gt; Add Import</strong> from the pop-up menu in the editor
           </li>
           <li>
-            Select <strong>Source</strong> &gt; <strong>Add Import</strong> from the menu bar.
+            Select <strong>Source &gt; Add Import</strong> from the menu bar.
           </li>
           <li>
-            Press <strong>Ctrl</strong>+<strong>Shift</strong>+<strong>M</strong>
+            Press <strong>Ctrl + Shift + M</strong>
           </li>
         </ul>
       </li>
@@ -53,8 +53,7 @@
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
-       <a href="../reference/ref-menu-source.htm">Source menu</a><br>
-       &nbsp;
+       <a href="../reference/ref-menu-source.htm">Source menu</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
