--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -15,11 +15,11 @@
     </h1>
     <ul>
       <li>
-        To display the selected Java file in a single element view, click the&nbsp;<strong><strong>Show Source of Selected Element Only</strong></strong> button in the workbench
+        To display the selected Java file in a single element view, click the&nbsp;<strong>Show Source of Selected Element Only</strong> button in the workbench
         toolbar, so that it is pressed.
       </li>
       <li>
-        To display the selected Java file in a whole (non-segmented) view, click the&nbsp;<strong><strong>Show Source of Selected Element Only</strong></strong> button in the
+        To display the selected Java file in a whole (non-segmented) view, click the&nbsp;<strong>Show Source of Selected Element Only</strong> button in the
         workbench toolbar, so that it is not pressed.
       </li>
     </ul>
