--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
@@ -21,10 +21,10 @@
         Do one of the following while editing your Java code: 
         <ul>
           <li>
-            Select <strong>Source &gt;&nbsp;</strong>Organize Imports from the pop-up menu in the editor
+            Select <strong>Source &gt; Organize Imports </strong> from the pop-up menu in the editor
           </li>
           <li>
-            Select <strong>Source</strong> &gt; <strong>Organize Imports</strong> from the menu bar
+            Select <strong>Source &gt; Organize Imports</strong> from the menu bar
           </li>
           <li>
             Press <strong>Ctrl</strong>+<strong>Shift</strong>+<strong>O</strong>
@@ -54,8 +54,7 @@
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="../reference/ref-menu-source.htm">Source menu</a><br>
-       &nbsp;
+      <a href="../reference/ref-menu-source.htm">Source menu</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
