--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
@@ -17,12 +17,14 @@
       New type hierarchies can open in a Hierarchy view or in a Java Hierarchy perspective. You can indicate which is the default method for opening new type hierarchies on the
       preferences pages.
     </p>
-    <p>
-      1.Select <strong>Window</strong> &gt; <strong>Preferences</strong>, and select the <strong>Java</strong> category. The general Java Preferences page opens.
-    </p>
-    <p>
-      2.Use the radio buttons that appear under <strong>When opening a Type Hierarchy</strong> to indicate your preference.
-    </p>
+	<ol>
+    <li>
+      Select <strong>Window</strong> &gt; <strong>Preferences</strong>, and select the <strong>Java</strong> category. The general Java Preferences page opens.
+    </li>
+    <li>
+      Use the radio buttons that appear under <strong>When opening a Type Hierarchy</strong> to indicate your preference.
+    </li>
+	</ol>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
@@ -43,7 +45,7 @@
     </p>
     <p>
       <a href="../reference/ref-13.htm">Java Base preference page</a><br>
-       <a href="../reference/ref-13.htm"></a>&nbsp;
+      <a href="../reference/ref-13.htm"></a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
