--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -17,9 +17,9 @@
         Select <strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Debug</strong>.
       </li>
       <li>
-        Setting the <strong><strong>Default perspective for Debug</strong></strong> option sets the selected perspective as the default perspective to become active automatically
-        each time a launch configuration is launched in debug mode. This default can be overridden in a launch configuration by setting the <strong><strong>Perspective to switch
-        to or open when launched in: &gt; Debug mode</strong></strong> option found on the <strong>Common</strong> tab in the launch configuration dialog.<br>
+        Setting the <strong>Default perspective for Debug</strong> option sets the selected perspective as the default perspective to become active automatically
+        each time a launch configuration is launched in debug mode. This default can be overridden in a launch configuration by setting the <strong>Perspective to switch
+        to or open when launched in: Debug mode</strong> option found on the <strong>Common</strong> tab in the launch configuration dialog.<br>
         <br>
          If the selected perspective is not open at the time, a perspective is created. If a perspective is created, it will adhere to the workbench preference for new
         perspectives (<strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Workbench</strong> &gt; <strong>Perspectives</strong>) and will either open in the
@@ -28,7 +28,7 @@
       <li>
         Setting the <strong><strong>Default perspective for Run</strong></strong> option sets the selected perspective as the default perspective to become active automatically
         each time a launch configuration is launched in run mode. This default can be overridden in a launch configuration by setting the <strong><strong>Perspective to switch to
-        or open when launched in: &gt; Run mode</strong></strong> option found on the <strong>Common</strong> tab in the launch configuration dialog.<br>
+        or open when launched in: Run mode</strong></strong> option found on the <strong>Common</strong> tab in the launch configuration dialog.<br>
         <br>
          If the selected perspective is not open at the time, a perspective is created. If a perspective is created, it will adhere to the workbench preference for new
         perspectives (<strong>Window</strong> &gt; <strong>Preferences</strong> &gt; <strong>Workbench</strong> &gt; <strong>Perspectives</strong>) and will either open in the
@@ -59,9 +59,9 @@
        <a href="../reference/ref-11.htm">Debug preferences</a><br>
        <a href="../reference/ref-51.htm">Debug view</a><br>
        <a href="../reference/ref-4.htm">Run and debug actions</a><br>
-       &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
+    </p>
+    <p>
+       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
