--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
@@ -36,7 +36,9 @@
        <a href="tasks-12.htm">Organizing Java projects</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-121.htm">New Java Project wizard</a><br>
        <a href="../reference/ref-128.htm">New Source Folder wizard</a><br>
        <a href="../reference/ref-125.htm">New Java Package wizard</a><br>
