--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
@@ -67,7 +67,9 @@
        <a href="tasks-149.htm">Creating a Java scrapbook page</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-121.htm">New Java Project wizard</a><a href="../reference/ref-121.htm"></a>
     </p>
     <p>
