--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
@@ -39,7 +39,9 @@
        <a href="tasks-193.htm">Showing and hiding method return types in Java views</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
