--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
@@ -21,31 +21,31 @@
         Open the New Java Interface wizard.
       </li>
       <li>
-        Edit the&nbsp;<strong><strong>Source Folder</strong></strong> field to indicate in which folder you want the new interface to reside. You can either type a path or click
-        the&nbsp;<strong><strong>Browse</strong></strong> button to find the folder. If a folder is found for the current selection, that folder appears in the
+        Edit the&nbsp;<strong>Source Folder</strong> field to indicate in which folder you want the new interface to reside. You can either type a path or click
+        the&nbsp;<strong>Browse</strong> button to find the folder. If a folder is found for the current selection, that folder appears in the
         <strong>Source&nbsp;</strong>Folder field as the container for the new interface.
       </li>
       <li>
-        Select the&nbsp;<strong><strong>Enclosing Type</strong></strong> check box.
+        Select the&nbsp;<strong>Enclosing Type</strong> check box.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Enclosing Type</strong></strong> field, type the name of the enclosing type or click the&nbsp;<strong><strong>Browse</strong></strong> button
+        In the&nbsp;<strong>Enclosing Type</strong> field, type the name of the enclosing type or click the&nbsp;<strong>Browse</strong> button
         to select the enclosing type for the new interface.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Name</strong></strong> field, type a name for the new interface.
+        In the&nbsp;<strong>Name</strong> field, type a name for the new interface.
       </li>
       <li>
-        Select the <strong>public</strong> or <strong>default</strong> access modifier by using the&nbsp;<strong><strong>Modifiers</strong></strong> radio buttons.
+        Select the <strong>public</strong> or <strong>default</strong> access modifier by using the&nbsp;<strong>Modifiers</strong> radio buttons.
       </li>
       <li>
-        Select the&nbsp;<strong><strong>static</strong></strong> check box if you want the new interface to be static.
+        Select the&nbsp;<strong>static</strong> check box if you want the new interface to be static.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Add</strong></strong> button to add interfaces for the new interface to extend.
+        Click the&nbsp;<strong>Add</strong> button to add interfaces for the new interface to extend.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Finish</strong></strong> when you are done.
+        Click&nbsp;<strong>Finish</strong> when you are done.
       </li>
     </ol>
     <p>
@@ -67,7 +67,9 @@
        <a href="tasks-94.htm">Renaming a class or interface</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+   </p>
+    <p>	  
        <a href="../reference/ref-127.htm">New Java Interface wizard</a><br>
        <a href="../reference/ref-3.htm">Java Toolbar actions</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><a href="../reference/ref-view-package-explorer.htm"></a>
