--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
@@ -15,10 +15,10 @@
     </h1>
     <ol>
       <li>
-        Follow the procedure for creating a JAR file, but click <strong><strong>Next</strong></strong> in the last step to go to the JAR Packaging Options page.
+        Follow the procedure for creating a JAR file, but click <strong>Next</strong> in the last step to go to the JAR Packaging Options page.
       </li>
       <li>
-        If you want to save the JAR file description, select the <strong><strong>Save the description of this JAR in the workspace</strong></strong> check box.
+        If you want to save the JAR file description, select the <strong>Save the description of this JAR in the workspace</strong> check box.
       </li>
       <li>
         The compiler is able to generate CLASS files even when source contains errors. You have the option to exclude CLASS (but not source) files with compile errors. These files
@@ -35,22 +35,26 @@
         Select the <strong>Build projects if not built automatically</strong> checkbox if you want the export to perform a build before creating the JAR file.
       </li>
       <li>
-        Click <strong><strong>Finish</strong></strong> to create the JAR file immediately or <strong><strong>Next</strong></strong> if you want to change the default manifest.
+        Click <strong>Finish</strong> to create the JAR file immediately or <strong>Next</strong> if you want to change the default manifest.
       </li>
     </ol>
-    <br>
-     
     <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="tasks-33.htm">Creating a new JAR file</a><br>
        <a href="tasks-35.htm">Defining the JAR file&#39;s manifest</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="../reference/ref-export-jar.htm">JAR file exporter</a>
     </p>
     <p>
