--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
@@ -13,8 +13,9 @@
       Using the Hierarchy view
     </h1>
     <p>
-      <br>
-       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+    </p>
+    <p>
        <a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
        <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
        <a href="tasks-40.htm">Opening a type hierarchy on the current text selection</a><br>
@@ -23,10 +24,11 @@
        <a href="tasks-44.htm">Finding overridden methods</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-24.htm">Views and editors</a><br>
-       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
-       &nbsp;
+       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
