--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
@@ -18,29 +18,35 @@
     </p>
     <ul>
       <li>
-        <strong><strong>Show the Type Hierarchy</strong></strong> displays the type hierarchy of a type. This view shows all super- and subtypes of the selected type. Type
-        java.lang.<em>Object</em> is shown in the top-left corner. Interfaces are not shown.
+        <strong>Show the Type Hierarchy</strong> displays the type hierarchy of a type. This view shows all super- and subtypes of the selected type. Type
+        <em>java.lang.Object</em> is shown in the top-left corner. Interfaces are not shown.
       </li>
       <li>
-        <strong><strong>Show the Supertype Hierarchy</strong></strong> displays the supertype hierarchy of a type. This view shows all supertypes and the hierarchy of all
+        <strong>Show the Supertype Hierarchy</strong> displays the supertype hierarchy of a type. This view shows all supertypes and the hierarchy of all
         implemented interfaces. The selected type is always shown in the top-left corner.
       </li>
       <li>
-        <strong><strong>Show the Subtype Hierarchy</strong></strong> displays the subtype hierarchy of a type. This view shows all subtypes of the selected type and all
+        <strong>Show the Subtype Hierarchy</strong> displays the subtype hierarchy of a type. This view shows all subtypes of the selected type and all
         implementers of the selected interface (if the view is opened on an interface). The selected type is always shown in the top-left corner.
       </li>
     </ul>
-    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+	<p>	
+    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
      <a href="../concepts/concepts-6.htm">Java views</a> 
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="tasks-37.htm">Using the Hierarchy view</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="../reference/ref-24.htm">Views and editors</a><br>
-       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
-       &nbsp;
+       <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
