--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -16,43 +16,39 @@
     <p>
       To show CLASS files for inner types:
     </p>
-    <p>
-      1.Select the <strong>Filters</strong> command from the Package Explorer drop-down menu.
-    </p>
-    <p>
-      2. Ensure that the <strong>Hide anonymous inner class files</strong> filter is not selected.
-    </p>
+    <ol>
+	<li>
+      Select the <strong>Filters</strong> command from the Package Explorer drop-down menu.
+    </li>
+    <li>
+      Ensure that the <strong>Hide anonymous inner class files</strong> filter is not selected.
+    </li>
+	</ol>
     <p>
       To hide CLASS files for inner types:
     </p>
-    <p>
-      1.Select the <strong>Filters</strong> command from the Package Explorer drop-down menu.
-    </p>
-    <p>
-      2.Ensure that the <strong>Hide anonymous inner class files</strong> filter is selected.
-    </p>
+    <ol>
+	<li>
+      Select the <strong>Filters</strong> command from the Package Explorer drop-down menu.
+    </li>
+    <li>
+      Ensure that the <strong>Hide anonymous inner class files</strong> filter is selected.
+    </li>
+	</ol>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-2.htm">Showing and hiding elements</a>
-    </p>
-    <p>
+      <a href="tasks-2.htm">Showing and hiding elements</a><br>
       <a href="tasks-47.htm">Filtering elements</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a>
+      <a href="../reference/ref-dialog-java-element-filters.htm">Java Element Filters</a><br>
+      <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
     </p>
-    <p>
-      <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
-    </p>
-    <p>
-      <a href="../reference/ref-view-package-explorer.htm"></a>
-    </p>
-    &nbsp; 
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
