--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -21,7 +21,7 @@
         Press <strong>F4</strong>
       </li>
       <li>
-        select&nbsp;<strong><strong>Open Type Hierarchy</strong></strong> from the editor&#39;s pop-up menu
+        select&nbsp;<strong>Open Type Hierarchy</strong> from the editor&#39;s pop-up menu
       </li>
       <li>
         select <strong>Navigate &gt; Open Type Hierarchy</strong> from the menu bar
@@ -30,11 +30,15 @@
     <strong>Note:</strong> If the selected Java element (or editor selection) is not a type or a compilation unit, the hierarchy will be open on the type enclosing the current
     selection. 
     <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../concepts/concepts-7.htm">Java editor</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="tasks-37.htm">Using the Hierarchy view</a><br>
        <a href="tasks-7.htm">Changing new type hierarchy defaults</a><br>
        <a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
@@ -43,7 +47,9 @@
        <a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>	  
        <a href="../reference/ref-24.htm">Views and editors</a><br>
        <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
        <a href="../reference/ref-menu-edit.htm">Edit menu</a>
