--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
@@ -45,7 +45,9 @@
        <a href="tasks-41.htm">Opening a type hierarchy in the workbench</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-24.htm">Views and editors</a><br>
        <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
        <a href="../reference/ref-13.htm">Java Base preference page</a>
