--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
@@ -13,13 +13,17 @@
       Using the Package Explorer view
     </h1>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="tasks-47.htm">Filtering elements</a><br>
        <a href="tasks-2.htm">Showing and hiding elements</a><br>
        <a href="tasks-51.htm">Moving folders, packages and files</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+    </p>
+    <p>	  
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
