--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -48,11 +48,12 @@
        <a href="tasks-65.htm">Using content/code assist</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-java-editor.htm">Java Editor</a><br>
        <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-       <a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
-       &nbsp;
+       <a href="../reference/ref-java-editor.htm">Java editor actions</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
