--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -31,21 +31,25 @@
       </li>
     </ol>
     <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../concepts/concepts-7.htm">Java editor</a><br>
        <a href="../concepts/concepts-3.htm">Java projects</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="tasks-54.htm">Using the Java editor</a><br>
-       <a href="tasks-20.htm">Creating a class in an existing compilation unit</a><br>
-       &nbsp;
+       <a href="tasks-20.htm">Creating a class in an existing compilation unit</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+	</p>
+	<p>
        <a href="../reference/ref-dialog-gettersetter.htm">Generate Getter and Setter</a><br>
-       <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-outline.htm">Outline view for Java</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
